tester/src/test/aya/failure/issue274.aya.txt
In file $FILE:3:4 ->

  1 | \data Z : \Set
  2 |   | zero
  3 |   | zero
          ^--^
  
Error: Redefinition of constructor zero
What are you doing?
